crates/swc/tests/stacktrace/deno-10014/output/stacks.txt
$DIR/tests/stacktrace/deno-10014/input/index.js:10
        throw new Error("Hello");
              ^

Error: Hello
    at t ($DIR/tests/stacktrace/deno-10014/input/index.js:10:15)
    at t ($DIR/tests/stacktrace/deno-10014/input/index.js:12:5)
    at a ($DIR/tests/stacktrace/deno-10014/input/index.js:2:5)
    at Object.<anonymous> ($DIR/tests/stacktrace/deno-10014/input/index.js:14:1)
    at node:internal/main/run_main_module:17:47
